# OSPA-SuryaOCR

./: .dockerignore  .env.example  .gitignore  CITATION.bib  Dockerfile  README.md  TEST_INSTRUCTIONS.md  config.py  docker-compose.yml  main.py  preload_models.py  pyproject.toml  requirements.txt  run.py  setup.py
app/: __init__.py  extensions.py
app/database/: admin_panel_app.py  connection.py  database_aktarma.py  database_service.py  models.py  name_variants.py  operations.py  test.py  test_operations.py
app/database/static/js/: app.js
app/database/templates/: admin_panel_index.html
app/modules/admin/: __init__.py  routes.py
app/modules/common/: utils.py
app/modules/ocr/: DocumentMetadata.py  GazeteOCRProcessor.py  ProcessingProgressTracker.py  SuryaOCR_backend.py  __init__.py  database_integration.py  on_isleme_main.py  routes.py
app/static/: on_isleme_index.html
app/static/admin/css/: style.css
app/static/admin/js/: app.js
app/static/js/: preprocessing_integration.js
app/templates/: contact.html  index.html  landing.html  ocr_info.html  on_isleme_index.html  preprocessing_info.html
app/templates/admin/: index.html
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: FileUploader.jsx  Footer.jsx  LayoutViewer.jsx  MetadataForm.jsx  Navbar.jsx  NeuralBackground.jsx  ProcessingView.jsx  ResultsView.jsx  ScrollToTop.jsx  SettingsPanel.jsx  StepProgressBar.jsx
frontend/src/hooks/: useOCR.js
scripts/: migration.py  ocr_migration.py
